containerized mongodb support